--- a/contact.html
+++ b/contact.html
@@ -443,7 +443,7 @@ window.addEventListener('scroll', () => {
     <!-- From Uiverse.io by Smit-Prajapati --> 
 <br><br><br><br><br><br><br>
 <div class="form-container">
-  <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
+  <form class="form" action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
 
@@ -465,4 +465,5 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
 
