--- a/careers.html
+++ b/careers.html
@@ -4,19 +4,458 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <style>
+  html{
+    scroll-behavior: smooth;
+  }
     body{
-        background-image: url("background.png");
+       background-image: url("pic/background.png");
+           background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
     min-height: 100vh;
     }
-    h1{
+      h1{
+        margin-top: 100px;
+        color: white;
+    font-family: "Zen Dots", sans-serif;
+    font-size: 3rem;
+    text-align: center;
+    opacity: 0;
+    animation: fadeInUp 0.8s ease-out forwards;
+    animation-delay: 0.3s;
+}
+ @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+ }
+    .navlinks{
+   font-family: "Zen Dots", sans-serif;
+   display: flex;
+   gap: 50px;
+   justify-content: center;
+ }
+ .navlinks a{
+       color: white;
+   text-decoration: none;
+   gap: 30px;
+   transition: all 0.4s ease;
+ }
+ .navlinks a:hover{
+    color: #2E4F7A;
+ }
+ /* From Uiverse.io by SouravBandyopadhyay */ 
+.notification {
+    margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  isolation: isolate;
+  position: relative;
+  width: 18rem;
+  height: 8rem;
+  background: #29292c;
+  border-radius: 1rem;
+  overflow: hidden;
+  font-family: "Zen Dots", sans-serif;
+  font-size: 16px;
+  --gradient: linear-gradient(to bottom, #2eadff, #3d83ff, #7e61ff);
+  --color: #32a6ff
+}
+
+.notification:before {
+  position: absolute;
+  content: "";
+  inset: 0.0625rem;
+  border-radius: 0.9375rem;
+  background: #18181b;
+  z-index: 2
+}
+
+.notification:after {
+  position: absolute;
+  content: "";
+  width: 0.25rem;
+  inset: 0.65rem auto 0.65rem 0.5rem;
+  border-radius: 0.125rem;
+  background: var(--gradient);
+  transition: transform 300ms ease;
+  z-index: 4;
+}
+
+.notification:hover:after {
+  transform: translateX(0.15rem)
+}
+
+.notititle {
+  color: var(--color);
+  padding: 0.65rem 0.25rem 0.4rem 1.25rem;
+  font-weight: 500;
+  font-family: "Zen Dots", sans-serif;
+  font-size: 1.1rem;
+  transition: transform 300ms ease;
+  z-index: 5;
+}
+
+.notification:hover .notititle {
+  transform: translateX(0.15rem)
+}
+
+.notibody {
+  color: #99999d;
+  padding: 0 1.25rem;
+  transition: transform 300ms ease;
+  z-index: 5;
+}
+
+.notification:hover .notibody {
+  transform: translateX(0.25rem)
+}
+
+.notiglow,
+.notiborderglow {
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  transform: translate(-50%, -50%);
+  background: radial-gradient(circle closest-side at center, white, transparent);
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.notiglow {
+  z-index: 3;
+}
+
+.notiborderglow {
+  z-index: 1;
+}
+
+.notification:hover .notiglow {
+  opacity: 0.1
+}
+
+.notification:hover .notiborderglow {
+  opacity: 0.1
+}
+
+.note {
+  color: var(--color);
+  position: fixed;
+  top: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 0.9rem;
+  width: 75%;
+}
+.position{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 90px;
+    opacity: 0;
+    animation: fadeInUp 0.8s ease-out forwards;
+    animation-delay: 0.6s;
+}
+ @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+ }
+ .positin-2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 90px;
+    opacity: 0;
+    animation: fadeInUp 0.8s ease-out forwards;
+    animation-delay: 0.9s;
+}
+ @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+ }
+ /* From Uiverse.io by satyamchaudharydev */ 
+.button {
+  font-family: "Zen Dots", sans-serif;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: #29292c;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  gap: 10px;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+  cursor: pointer;
+   opacity: 0;
+    animation: fadeInUp 0.8s ease-out forwards;
+    animation-delay: 1.2s;
+}
+ @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+ }
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.button:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.button:hover .icon {
+  transform: translate(4px);
+}
+
+.button:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
+footer{
+  color: white;
+  font-family: "Zen Dots", sans-serif;
+  text-align: center;
+  margin-top: 250px;
+}
+/* =========================
+   RESPONSIVE DESIGN
+========================= */
+
+/* TABLET */
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 2.4rem;
+    margin-top: 80px;
+  }
+
+  .navlinks {
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+
+  .position,
+  .positin-2 {
+    gap: 50px;
+  }
+
+  footer {
+    margin-top: 180px;
+  }
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+  body {
+    background-position: top;
+  }
+
+  .navlinks {
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+  }
+
+  .navlinks a {
+    font-size: 0.9rem;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+    margin-top: 60px;
+    padding: 0 15px;
+  }
+
+  .notification {
+    width: 50%;
+    height: auto;
+    padding-bottom: 10px;
+  }
+
+  .notititle {
+    font-size: 1rem;
+  }
+
+  .notibody {
+    font-size: 0.85rem;
+  }
+
+  .button {
+    font-size: 0.9rem;
+    padding-inline: 1rem;
+  }
+
+  footer {
+    margin-top: 120px;
+    font-size: 0.75rem;
+  }
+}
+
+/* SMALL MOBILE */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .notititle {
+    font-size: 0.95rem;
+  }
+
+  .notibody {
+    font-size: 0.8rem;
+  }
+
+  footer {
+    margin-top: 100px;
+  }
+}
+#menu-toggle {
+  display: none;
+}
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background: white;
+  transition: 0.3s;
+}
+@media (max-width: 768px) {
+
+  .hamburger {
+    display: flex;
+    background-color: black;
+  }
+
+  .navlinks {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.95);
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px 0;
+    display: none;
+  }
+
+  /* când checkbox e bifat */
+  #menu-toggle:checked ~ .navlinks {
+    display: flex;
+  }
+}
+#menu-toggle:checked + .hamburger span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+#menu-toggle:checked + .hamburger span:nth-child(2) {
+  opacity: 0;
+}
+
+#menu-toggle:checked + .hamburger span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+.navbar {
+  position: relative;
+  z-index: 1000;
+}
+@media (max-width: 768px) {
+
+  .hamburger {
+    display: flex;
+    background-color: black;
+    padding: 12px;              
+    border-radius: 10px;
+    z-index: 1001;
+  }
+
+  .hamburger span {
+    background: white;
+  }
+}
+        body{
+       background-image: url(https://cdn.discordapp.com/attachments/1454526378379579624/1454526892026630306/content.png?ex=6951693a&is=695017ba&hm=ddfdb820dd42dd69cc08d51c9577f54c4fb06a518d3ba79ef0a718431f685bfa&);
+           background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+    }
+      h1{
         margin-top: 100px;
         color: white;
     font-family: "Zen Dots", sans-serif;
@@ -58,9 +497,12 @@
  .navlinks a{
        color: white;
    text-decoration: none;
-   position: relative;
    gap: 30px;
+   position: relative;
    transition: all 0.4s ease;
+ }
+ .navlinks a:hover{
+    color: #2E4F7A;
  }
   .navlinks a::after {
   content: "";
@@ -77,11 +519,7 @@
 .navlinks a:hover::after {
   width: 100%; /* linia se intinde complet */
 }
- .navlinks a:hover{
-    color: #2E4F7A;
- }
- /* From Uiverse.io by Smit-Prajapati */ 
-.orange {
+ .orange {
   color: #ff7a01;
 }
 
@@ -162,14 +600,12 @@
 }
 
 .form-container .form .button-container .send-button {
-  flex-basis: 75%;
-  width: 100%;
-  max-width: 700px;
+  flex-basis: 70%;
   background: #2E4F7A;
   padding: 10px;
+  width: 100%;
   color: #001925;
   text-align: center;
-  margin: 0 auto;
   font-weight: bold;
   border: 1px solid transparent;
   transition: all 0.2s ease-in-out;
@@ -229,12 +665,11 @@ footer{
   }
 
   .form-container {
-    max-width: 85%;
     padding: 25px;
   }
 
   footer {
-    margin-top: 200px;
+    margin-top: 220px;
   }
 }
 
@@ -258,11 +693,6 @@ footer{
     font-size: 1.8rem;
     margin-top: 60px;
     padding: 0 15px;
-  }
-
-  .form-container {
-    max-width: 90%;
-    padding: 20px;
   }
 
   .heading {
@@ -311,28 +741,19 @@ footer{
   flex-direction: column;
   cursor: pointer;
   gap: 5px;
-    opacity: 0;
-  transform: translateX(-10px);
-  transition: 0.3s ease;
-  
-  background-color: black;
-  padding: 12px;
-  border-radius: 10px;
 }
 
 .hamburger span {
   width: 25px;
   height: 3px;
   background: white;
-  transition: 0.3s ease;
+  transition: 0.3s;
 }
 @media (max-width: 768px) {
 
   .hamburger {
     display: flex;
-    opacity: 1;
-    transform: translateX(0);
-    z-index: 1001;
+    background-color: black;
   }
 
    .navlinks {
@@ -359,14 +780,9 @@ footer{
     transform: translateY(0);
     pointer-events: auto;
   }
-
-  /* când checkbox e bifat */
-  #menu-toggle:checked ~ .navlinks {
-    display: flex;
-  }
 }
 #menu-toggle:checked + .hamburger span:nth-child(1) {
-   transform: translateY(8px) rotate(45deg);
+  transform: rotate(45deg) translate(5px, 5px);
 }
 
 #menu-toggle:checked + .hamburger span:nth-child(2) {
@@ -374,7 +790,7 @@ footer{
 }
 
 #menu-toggle:checked + .hamburger span:nth-child(3) {
- transform: translateY(-8px) rotate(-45deg);
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 .navbar {
   position: relative;
@@ -407,7 +823,7 @@ footer{
 
 </style>
 <body>
-    <!-- Plasează chiar după <body> -->
+  <!-- Plasează chiar după <body> -->
 <div id="progress-bar"></div>
 <script>
 window.addEventListener('scroll', () => {
@@ -417,7 +833,7 @@ window.addEventListener('scroll', () => {
   document.getElementById('progress-bar').style.width = scrollPercent + '%';
 });
 </script>
-<div id="custom-cursor"></div>
+
 <nav class="navbar">
   <div class="logo">NEXO</div>
 
@@ -439,10 +855,68 @@ window.addEventListener('scroll', () => {
     <a href="careers.html">CAREERS</a>
   </div>
 </nav>
-    <h1>Get in Touch with NEXO</h1>
-    <!-- From Uiverse.io by Smit-Prajapati --> 
+    <h1>NEXO Careers</h1>
+    <br><br><br><br><br>
+    <div class="position">
+   <!-- From Uiverse.io by SouravBandyopadhyay --> 
+<div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Apply as a Graphic Designer</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+  <div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Apply as a Content Creator</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+   <div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Apply as a Community Manager</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+     <div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Apply as a Video Editor</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+  </div>
+  <div class="positin-2">
+        <div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Apply for Branding</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+          <div class="notification">
+    <div class="notiglow"></div>
+    <div class="notiborderglow"></div>
+    <div class="notititle">Pro Player Application</div>
+    <div class="notibody">Join Nexo Group and help Us grow bigger</div>
+  </div>
+  </div>
+  <!-- From Uiverse.io by satyamchaudharydev --> 
+   <br><br><br><br><br>
+   <a href="#apply">
+<button class="button">
+  Apply Now
+  <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+    <path
+      fill-rule="evenodd"
+      d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+      clip-rule="evenodd"
+    ></path>
+  </svg>
+</button>
+</a>
 <br><br><br><br><br><br><br>
-<div class="form-container">
+<section id="apply">
+    <h1>Apply Now</h1>
+    <br><br><br><br><br><br><br>
+    <div class="form-container">
   <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
@@ -450,6 +924,8 @@ window.addEventListener('scroll', () => {
     <input name="name" placeholder="Name" type="text" class="input" required>
 
     <input name="email" placeholder="Email" type="email" class="input" required>
+
+    <input name="position" placeholder="Position ex: Graphic Designer" type="text" class="input" required>
 
     <textarea name="message" placeholder="Say Hello" rows="14" class="textarea" required></textarea>
 
@@ -459,10 +935,9 @@ window.addEventListener('scroll', () => {
 
   </form>
 </div>
-
+</section>
 <footer>
   &copy; 2025 NEXO Group. All rights reserved.
 </footer>
 </body>
 </html>
-
