--- a/careers.html
+++ b/careers.html
@@ -13,7 +13,7 @@
     scroll-behavior: smooth;
   }
     body{
-       background-image: url("pic/background.png");
+       background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -941,3 +941,4 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
