--- a/careers.html
+++ b/careers.html
@@ -917,7 +917,7 @@ window.addEventListener('scroll', () => {
     <h1>Apply Now</h1>
     <br><br><br><br><br><br><br>
     <div class="form-container">
-  <form action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
+  <form class="form" action="https://formsubmit.co/business.nexo.official@gmail.com" method="POST">
 
     <span class="heading">Get in touch</span>
 
@@ -941,4 +941,5 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
 
