--- a/careers.html
+++ b/careers.html
@@ -16,8 +16,8 @@
        background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;]
-        min-height:100vh;
+    background-position: center;
+    min-height: 100vh;
     }
       h1{
         margin-top: 100px;
@@ -934,6 +934,7 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
 
 
 
