--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ h3 {
 
   white-space: nowrap;
   overflow: hidden;
+width: 22ch; /* lățimea finală a textului */
+  max-width: 90%; /* responsive pe mobil */
 
   width: 0;
   animation: typing 2s steps(22, end) forwards;
@@ -326,17 +328,23 @@ footer{
     display: flex;
   }
 
-  .navlinks {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    flex-direction: column;
-    background: rgba(0,0,0,0.9);
-    align-items: center;
-    gap: 20px;
-    padding: 20px 0;
-  }
+    .navlinks {
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background: rgba(0,0,0,0.95);
+        padding: 20px 0;
+        gap: 20px;
+
+        display: none; /* ascuns inițial */
+        z-index: 100;
+    }
+
+    #menu-toggle:checked ~ .navlinks {
+        display: flex; /* afișează când checkbox-ul e bifat */
+    }
 
   .navlinks.active {
     display: flex;
@@ -780,3 +788,4 @@ Coming Soon
 </footer>
 </body>
 </html>
+
