--- a/updates.html
+++ b/updates.html
@@ -61,10 +61,17 @@
    gap: 30px;
    transition: all 0.4s ease;
  }
+ .navlinks a{
+       color: white;
+   text-decoration: none;
+   position: relative;
+   gap: 30px;
+   transition: all 0.4s ease;
+ }
  .navlinks a:hover{
     color: #2E4F7A;
  }
-  .navlinks a::after {
+ .navlinks a::after {
   content: "";
   position: absolute;
   left: 50%;            /* porneste din centru */
@@ -452,6 +459,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
