--- a/updates.html
+++ b/updates.html
@@ -239,6 +239,7 @@ footer{
     flex-direction: column;
     gap: 15px;
     margin-top: 20px;
+	  align-items: center;
   }
 
   .navlinks a {
@@ -459,6 +460,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
