--- a/updates.html
+++ b/updates.html
@@ -58,13 +58,9 @@
        color: white;
    text-decoration: none;
    position: relative;
-   gap: 30px;
-   transition: all 0.4s ease;
- }
- .navlinks a{
-       color: white;
-   text-decoration: none;
-   position: relative;
+	 display: inline-block;
+	  width: auto;
+	 text-align: center;
    gap: 30px;
    transition: all 0.4s ease;
  }
@@ -460,6 +456,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
