--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,16 @@
        color: white;
    text-decoration: none;
    position: relative;
+	 display: inline-block;
+	  width: auto;
+	 text-align: center;
    gap: 30px;
    transition: all 0.4s ease;
  }
-  .navlinks a::after {
+ .navlinks a:hover{
+    color: #2E4F7A;
+ }
+ .navlinks a::after {
   content: "";
   position: absolute;
   left: 50%;            /* porneste din centru */
@@ -77,9 +83,6 @@
 .navlinks a:hover::after {
   width: 100%; /* linia se intinde complet */
 }
- .navlinks a:hover{
-    color: #2E4F7A;
- }
  /* From Uiverse.io by Smit-Prajapati */ 
 .orange {
   color: #ff7a01;
@@ -248,8 +251,8 @@ footer{
     flex-direction: column;
     gap: 15px;
     margin-top: 20px;
+	  align-items: center;
   }
-
   .navlinks a {
     font-size: 0.9rem;
   }
@@ -311,62 +314,42 @@ footer{
   flex-direction: column;
   cursor: pointer;
   gap: 5px;
-    opacity: 0;
-  transform: translateX(-10px);
-  transition: 0.3s ease;
-  
-  background-color: black;
-  padding: 12px;
-  border-radius: 10px;
 }
 
 .hamburger span {
   width: 25px;
   height: 3px;
   background: white;
-  transition: 0.3s ease;
+  transition: 0.3s;
 }
 @media (max-width: 768px) {
-
-  .hamburger {
+   .hamburger {
     display: flex;
-    opacity: 1;
-    transform: translateX(0);
-    z-index: 1001;
   }
 
    .navlinks {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background: rgba(0,0,0,0.95);
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background: rgba(0,0,0,0.95);
+        padding: 20px 0;
+        gap: 20px;
 
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 20px 0;
-
-    opacity: 0;
-    transform: translateY(-10px);
-    pointer-events: none;
-
-    transition: opacity 0.3s ease, transform 0.3s ease;
+        display: none; /* ascuns inițial */
+        z-index: 100;
   }
 
   #menu-toggle:checked ~ .navlinks {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
+ display: flex; /* afișează când checkbox-ul e bifat */
   }
-
-  /* când checkbox e bifat */
-  #menu-toggle:checked ~ .navlinks {
+	  .navlinks.active {
     display: flex;
   }
 }
 #menu-toggle:checked + .hamburger span:nth-child(1) {
-   transform: translateY(8px) rotate(45deg);
+  transform: rotate(45deg) translate(5px, 5px);
 }
 
 #menu-toggle:checked + .hamburger span:nth-child(2) {
@@ -374,7 +357,7 @@ footer{
 }
 
 #menu-toggle:checked + .hamburger span:nth-child(3) {
- transform: translateY(-8px) rotate(-45deg);
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 .navbar {
   position: relative;
@@ -383,6 +366,7 @@ footer{
 @media (max-width: 768px) {
 
   .hamburger {
+    display: flex;
     display: flex;
     background-color: black;
     padding: 12px;              
@@ -465,5 +449,6 @@ window.addEventListener('scroll', () => {
 </footer>
 </body>
 </html>
+
 
 
