--- a/updates.html
+++ b/updates.html
@@ -10,7 +10,7 @@
 </head>
 <style>
     body{
-       background-image: url("background.png");
+      /* background-image: url("background.png");*/
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -466,6 +466,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
