--- a/about.html
+++ b/about.html
@@ -112,6 +112,8 @@
     width: 0;
     animation: typing 2s steps(22, end) forwards;
     animation-delay: 0.9s;
+     display: inline-block; /* astfel margin:auto va centra */
+    width: auto; /* lasă-l să ia lungimea textului */
 }
 
 
@@ -557,6 +559,27 @@ h4{
   z-index: 10000;
   transition: width 0.25s ease-out;
 }
+    @media (max-width: 768px) {
+  .navlinks {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.95);
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px 0;
+
+    display: none;
+    z-index: 1000;
+  }
+
+  #menu-toggle:checked ~ .navlinks {
+    display: flex;
+  }
+}
+
 </style>
 <body>
     <!-- Plasează chiar după <body> -->
@@ -679,4 +702,5 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
