--- a/about.html
+++ b/about.html
@@ -106,10 +106,11 @@
     font-size: 2rem;
     text-align: center;
 
-    white-space: nowrap;
     overflow: hidden;
-
-    width: 0;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+ 
     animation: typing 2s steps(22, end) forwards;
     animation-delay: 0.9s;
      display: inline-block; /* astfel margin:auto va centra */
@@ -702,5 +703,6 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
 
