--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+         overflow-x: hidden;
     }
       h1{
         margin-top: 100px;
@@ -100,21 +101,17 @@
             }
  }
  h3 {
-    margin: 100px auto 0;
-    color: white;
-    font-family: "Zen Dots", sans-serif;
-    font-size: 2rem;
-    text-align: center;
+  margin-top: 100px;
+  color: white;
+  font-family: "Zen Dots", sans-serif;
+  font-size: 2rem;
+  text-align: center;
 
-    overflow: hidden;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  display: inline-block;
   white-space: nowrap;
- 
-    animation: typing 2s steps(22, end) forwards;
-    animation-delay: 0.9s;
-     display: inline-block; /* astfel margin:auto va centra */
-    width: auto; /* lasă-l să ia lungimea textului */
+  overflow: hidden;
+
+  animation: typing 2s steps(22, end) forwards;
 }
 
 
@@ -703,6 +700,7 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
 
 
