--- a/about.html
+++ b/about.html
@@ -9,6 +9,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <style>
+    html,body{
+  max-width:100%;
+  overflow-x:hidden;
+}
+*{
+  box-sizing:border-box;
+}
+
      body{
        background-image: url("background.png");
            background-repeat: no-repeat;
@@ -106,8 +114,6 @@
   font-family: "Zen Dots", sans-serif;
   font-size: 2rem;
   text-align: center;
-
-  display: inline-block;
   white-space: nowrap;
   overflow: hidden;
 
@@ -700,6 +706,7 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
 
 
