--- a/about.html
+++ b/about.html
@@ -9,20 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <style>
-    html,body{
-  max-width:100%;
-  overflow-x:hidden;
-}
-*{
-  box-sizing:border-box;
-}
-
      body{
        background-image: url("background.png");
            background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-         overflow-x: hidden;
     }
       h1{
         margin-top: 100px;
@@ -109,15 +100,18 @@
             }
  }
  h3 {
-  margin-top: 100px;
-  color: white;
-  font-family: "Zen Dots", sans-serif;
-  font-size: 2rem;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
+    margin: 100px auto 0;
+    color: white;
+    font-family: "Zen Dots", sans-serif;
+    font-size: 2rem;
+    text-align: center;
 
-  animation: typing 2s steps(22, end) forwards;
+    white-space: nowrap;
+    overflow: hidden;
+
+    width: 0;
+    animation: typing 2s steps(22, end) forwards;
+    animation-delay: 0.9s;
 }
 
 
@@ -563,27 +557,6 @@ h4{
   z-index: 10000;
   transition: width 0.25s ease-out;
 }
-    @media (max-width: 768px) {
-  .navlinks {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    background: rgba(0,0,0,0.95);
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 20px 0;
-
-    display: none;
-    z-index: 1000;
-  }
-
-  #menu-toggle:checked ~ .navlinks {
-    display: flex;
-  }
-}
-
 </style>
 <body>
     <!-- Plasează chiar după <body> -->
@@ -706,8 +679,3 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
-
-
-
-
-
