--- a/about.html
+++ b/about.html
@@ -145,11 +145,12 @@ h4{
     font-family: "Zen Dots", sans-serif;
     font-size: 2rem;
     text-align: center;
-
+      display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 0;
     white-space: nowrap;
     overflow: hidden;
-
-    width: 0;
     animation: typing 2s steps(22, end) forwards;
     animation-delay: 1.3s;
 }
@@ -679,4 +680,5 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
